opam-version: "2.0"
authors: "Francois Berenger"
maintainer: "unixjunkie@sdf.org"
homepage: "https://github.com/UnixJunkie/molenc"
bug-reports: "https://github.com/UnixJunkie/molenc/issues"
dev-repo: "git+https://github.com/UnixJunkie/molenc.git"
license: "BSD-3"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "batteries"
  "conf-gnuplot"
  "cpm"
  "dolog" {>= "4.0.0"}
  "dune" {>= "1.11"}
  "minicli" {>= "5.0.0"}
  "ocaml"
  "conf-r"
]
synopsis: "Multiple Linear Regression model"
description: """
Train a MLR model using R.
"""
# url {
#   src: "https://github.com/UnixJunkie/molenc/archive/XXX"
#   checksum: "md5=YYY"
# }
